# arrow-flight-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: auth.rs  azure_auth.rs  errors.rs  main.rs
src/auth/: azure.rs
