[package]
name = "flight-cli"
version = "0.1.0"
license = "MIT License"
description = "A Command Line Interface for Apache Arrow Flight"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-flight = "18.0.0"
clap = { version = "3.2.13", features = ["derive"] }
confy = "0.4.0"
futures = "0.3.21"
http = "0.2.8"
lazy_static = "1.4.0"
oauth2 = "4.2.3"
reqwest = "0.11.11"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.0", features = ["tokio-macros"] }
tonic = "0.7.2"
url = "2.2.2"
