# MIT License
#
# Copyright (c) 2022 84.51
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "flight-cli"
version = "0.1.1"
license = "MIT License"
description = "A Command Line Interface for Apache Arrow Flight"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "26.0.0"
arrow-flight = "26.0.0"
azure_core = "0.6.0"
azure_identity = "0.7.0"
chrono = "0.4.20"
clap = { version = "4.0.18", features = ["derive"] }
confy = "0.5.1"
futures = "0.3.21"
http = "0.2.8"
oauth2 = "4.2.3"
parquet = { version = "26.0.0", features = ["async"] }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.0", features = ["tokio-macros", "net"] }
tonic = { version = "0.8.0", features = ["tls", "tls-roots"] }
url = "2.2.2"
